# agartex-compilation

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.json  swagger.yaml
.github/workflows/: build-and-publish.yaml  verify.yaml
src/: config.rs  constants.rs  extract.rs  main.rs  utils.rs
src/control/compile/: mod.rs
src/domain/: projects.rs
src/repository/: mod.rs  projects.rs
src/routing/: mod.rs
src/service/: mod.rs
src/service/compilation/: mod.rs
src/service/execution/: mod.rs
